# graphRAG

./: PLAN.md  README.md  TASK.md  Tech.md  WALKTHROUGH.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: ingest.py  query.py  schemas.py
app/core/: config.py  logging.py
app/graph/: builder.py  neo4j_client.py  schema.py  traversal.py
app/ingestion/: chunker.py  entity_extractor.py  loader.py  pipeline.py
app/llm/: ollama.py  prompts.py  response.py
app/retriever/: graph.py  hybrid.py  vector.py
docker/: Dockerfile.api  Dockerfile.ollama
