[project]
name = "graphrag-system"
version = "0.1.0"
description = "Hybrid GraphRAG system with Neo4j and LlamaIndex"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "llama-index>=0.10.0",
    "llama-index-graph-stores-neo4j>=0.1.0",
    "llama-index-llms-ollama>=0.1.0",
    "llama-index-embeddings-ollama>=0.1.0",
    "neo4j>=5.17.0",
    "ollama>=0.1.6",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.26.0"
]
